# practica1Edd

./: README.md
practica1_EDD/: CMakeCache.txt  CMakeLists.txt  Carta.cpp  Carta.hpp  Gestor.cpp  Gestor.hpp  Juego.cpp  Juego.hpp  Makefile  cmake_install.cmake  main.cpp  practica1_EDD
practica1_EDD/estructuras/: Cola.cpp  Cola.hpp  ListaDoble.cpp  ListaDoble.hpp  Nodo.cpp  Nodo.hpp  NodoDoble.cpp  NodoDoble.hpp  Pila.cpp  Pila.hpp
